compiling_error.txt
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: In function 'infixToPostfix':
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:134:12: warning: return makes integer from pointer without a cast [-Wint-conversion]
     return expr;
            ^~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: In function 'cal':
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:407:4: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
  c = infixToPostfix(c);
    ^
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:408:17: warning: implicit declaration of function 'create' [-Wimplicit-function-declaration]
  return valtree(create(c));
                 ^~~~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:408:17: warning: passing argument 1 of 'valtree' makes pointer from integer without a cast [-Wint-conversion]
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:324:5: note: expected 'struct no *' but argument is of type 'int'
 int valtree (struct no *n){
     ^~~~~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: At top level:
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:414:12: error: conflicting types for 'create'
 struct no *create(char exp[]) {
            ^~~~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:408:17: note: previous implicit declaration of 'create' was here
  return valtree(create(c));
                 ^~~~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c: In function 'create':
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:418:7: error: conflicting types for 'push'
  void push(struct no*);
       ^~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:54:6: note: previous definition of 'push' was here
 void push(struct Stack* stack, char op)
      ^~~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:419:13: error: conflicting types for 'pop'
  struct no *pop();
             ^~~
C:\Users\Giovani Henriques\Documents\GitHub\ED\lista5e6eEI.c:48:6: note: previous definition of 'pop' was here
 char pop(struct Stack* stack)
      ^~~
